
1. in farm_pdf.rb:

    @farm = farm
to 
	@farm = Farm.find(farm)

2. In farms controller:

	pdf = FarmPdf.new(@farm, sale)
to
	pdf = FarmPdf.new(@farm.id, sale.id)

#################
 On 7.7, i changed the bounces controller to find the download on S3:
 
  	resp = s3.get_object({ bucket:'yv-output2', key: params[:filename] }, target: params[:filename])
to 
	foldery=params[:filename][0...-4] + "/"
   	resp = s3.get_object({ bucket:'yv-output2', key: foldery + params[:filename] }, target: params[:filename])

#################

	On 7.7., I removed all social media from the horse show page and the bounces controller

#################

 On 7.8, I added a parameter to the bounces/download pages to see if this stops some bot from automatically trying to download
bounces controller:
 if  params[:token] == 'random'
   redirect_to "https://www.google.com"
 end
 if !params[:token]
   redirect_to "https://www.google.com"
 end
 
 downloads index
	<td width="35%" style="padding-left: 2%"><%= link_to "Download video", new_bounce_path(:filename => horse.BulkUploadVideoName,:token => 'random') %></td>

#########################################

On 7.8.2021, changed the name of the downloads index file and the bounces index file & commented out the new section in the bounces controller.
Changed bounces/new html page to garbage name.
Also added this to the searches & bounces & horse/show & sales/show & farms/show controllers:
def index
    @clientip = request.ip[0..2]
    if @clientip == "10."
      redirect_back(fallback_location:"/")
    end
end

########################################
On 7.13.2021, added this to application controller:

    before_action :block_ip_addresses

  protected

  def block_ip_addresses
    head :unauthorized if current_ip_address[0..2] == "10."
  end

  def current_ip_address
    request.env['HTTP_X_REAL_IP'] || request.env['REMOTE_ADDR']
  end
#################################################

