@@ -13,6 +13,7 @@ gem 'fog-aws'
 gem "recaptcha"
 
 #gem 'sqlite3'
+gem 'rack-attack'
 
 gem "ransack", github: "activerecord-hackery/ransack", ref: "aada8"
 #gem 'sqlite3', git: "https://github.com/larskanis/sqlite3-ruby", branch: "add-gemspec"
